web: adjust rule dialog, server: adjust return dto
